--- a/_output/index.html
+++ b/_output/index.html
@@ -1,29 +1,244 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/static/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/static/index.css" />
-    <title>Snowpack App</title>
-  </head>
-  <body>  
-    <div class="banner">
-      <img height="128px" style="padding-right: 0" id="img" src="/static/logo.svg" />
-      <svg height="32px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"></path></svg>
-      <svg height="64px" style="padding-left: 8px;" viewBox="0 0 640 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
-            <g id="mountain-solid" transform="translate(-1.000000, 0.000000)" fill-rule="nonzero">
-                <path d="M635.92,462.7 L347.92,14.7 C342.03,5.54 331.89,0 321,0 C310.11,0 299.97,5.54 294.08,14.7 L6.08,462.7 C-0.250773249,472.547007 -0.699487627,485.064987 4.91,495.34 C10.522069,505.612419 21.2945349,512 33,512 L609,512 C620.71,512 631.48,505.61 637.09,495.33 C642.699457,485.058495 642.250708,472.543372 635.92,462.7 Z M321,91.18 L406.39,224 L321,224 L257,288 L218.94,249.94 L321,91.18 Z" id="Shape"></path>
-            </g>
-        </g>
-      </svg>
-    </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    
-<canvas id="canvas"></canvas>
-<script type="module" src="/_dist_/index.js"></script>
-<a href="/about">About Page</a>
+    <title>
+      Ferrytime
+    </title>
+
+    <meta
+      name="description"
+      content="Ferrytime"
+    />
+
+    <link rel="icon" href="/images/favicon.png" />
+    <link rel="stylesheet" href="/styles/index.css" />
+  </head>
+  <body>
+	  <div class="flex flex-col font-sans min-h-screen text-grey-darkest bg-blue-500">
+
+		  <nav class="bg-blue antialiased">
+			  <div class="flex flex-wrap items-center justify-between max-w-xl mx-auto p-4 md:p-8">
+				  <a href="/" class="flex items-center no-underline text-white ">
+          <span class="font-bold text-xl tracking-tight">Ferrytime</span>
+        </a>
+        <div>
+        </div>
+      </div>
+    </nav>
+          <div class="flex flex-col flex-1  max-w-xl mx-auto px-3 py-8 md:p-8 w-full ">
+		  
+<h2 class="mb-4 text-xl font-semibold text-white antialiased ">All Routes</h2><a href=/r/tsawwassen-to-swartz-bay/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Tsawwassen
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Swartz Bay
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/tsawwassen-to-southern-gulf-islands/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Tsawwassen
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Southern Gulf Islands
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        Delayed
+    </div>
+  </div>
+    </a><a href=/r/tsawwassen-to-duke-point/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Tsawwassen
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Duke Point
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/swartz-bay-to-fulford-harbour-saltspring-is/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Swartz Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Fulford Harbour (Saltspring Is.)
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/swartz-bay-to-southern-gulf-islands/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Swartz Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Southern Gulf Islands
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/swartz-bay-to-tsawwassen/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Swartz Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Tsawwassen
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/duke-point-to-tsawwassen/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Duke Point
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Tsawwassen
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/departure-bay-to-horseshoe-bay/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Departure Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Horseshoe Bay
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/horseshoe-bay-to-snug-cove-bowen-is/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Horseshoe Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Snug Cove (Bowen Is.)
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/horseshoe-bay-to-departure-bay/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Horseshoe Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Departure Bay
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/horseshoe-bay-to-langdale/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Horseshoe Bay
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Langdale
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a><a href=/r/langdale-to-horseshoe-bay/ >
+  <div class="max-w-md my-4 bg-white rounded-lg px-4 py-4 shadow border-b-4 border-blue-200 flex">
+    <div class="w-3/4">
+      <div class="text-grey-darkest font-bold pb-1">
+        Langdale
+      </div>
+
+      <div class="text-grey-darker font-bold text-sm">
+        <span class="text-xs text-grey-200 pb-1">to </span>
+        Horseshoe Bay
+      </div>
+    </div>
+    <div class="w-1/4 text-right">
+        On Time
+    </div>
+  </div>
+    </a>
+
+          </div>
+
+          <footer class="bg-blue-500 antialiased">
+            <div class="max-w-xl mx-auto p-4 md:p-8 text-sm">
+              <p class="text-white text-center">
+                Created by
+                <a
+                  href="https://github.com/deansallinen/ferrytime"
+                  class="font-bold no-underline text-white"
+                >
+                  Dean Sallinen
+                </a>
+              </p>
+            </div>
+          </footer>
+        </div>
   </body>
 </html>
